apps/core/openobserve/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openobserve
  namespace: openobserve
spec:
  selector:
    app: openobserve
  ports:
    - name: http
      port: 5080
      targetPort: 5080
